2008-12-01  David Kilzer  <ddkilzer@apple.com>

        Fix logic error in LegacyWebArchive::create() from r38884.

        * loader/archive/cf/LegacyWebArchive.cpp:
        (WebCore::LegacyWebArchive::create): Only continue if the
        subresource is actually added.

2008-12-01  David Kilzer  <ddkilzer@apple.com>

        Bug 22466: REGRESSION (35867): Many resources missing when saving webarchive of webkit.org

        <https://bugs.webkit.org/show_bug.cgi?id=22466>
        <rdar://problem/6403593>

        Reviewed by Brady Eidson.

        Test: http/tests/webarchive/test-preload-resources.html

        * loader/archive/cf/LegacyWebArchive.cpp:
        (WebCore::LegacyWebArchive::create): Check the WebCore cache for
        resources if DocumentLoader::subresource() doesn't return them.
        Note that the DocumentLoader::subresource() method returned
        preloaded resources before r35867, but this caused a regression in
        Mail.

2008-12-01  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Eric Seidel.

        Bug 22564: Make HTML elements' constructors take a QualifiedName
        https://bugs.webkit.org/show_bug.cgi?id=22564

        - Modified the remaining HTML elements' constructors to take a QualifiedName.

        - Added an assertion that the QualifiedName given corresponds to the element constructed.

        * bindings/js/JSAudioConstructor.cpp:
        (WebCore::constructAudio):
        * html/HTMLAudioElement.cpp:
        (WebCore::HTMLAudioElement::HTMLAudioElement):
        * html/HTMLAudioElement.h:
        * html/HTMLBRElement.cpp:
        (WebCore::HTMLBRElement::HTMLBRElement):
        * html/HTMLBRElement.h:
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::setInnerText):
        * html/HTMLElementFactory.cpp:
        (WebCore::brConstructor):
        (WebCore::quoteConstructor):
        (WebCore::marqueeConstructor):
        (WebCore::audioConstructor):
        (WebCore::videoConstructor):